Fix some weird spacing, padding, and margins

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,9 +79,9 @@ header a {
 
 .banner {
   background-color: #d8d8d8;
-  width: 100%;
+  /*width: 100%;*/
   display: flex;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
 
 }
 
@@ -92,18 +92,19 @@ header a {
 
 .text-section {
   border: 0.2em solid green;
-  width: 38%;
+  width: 40%;
 }
 
 .text-content {
-  margin-top: 4.7rem;
+  margin: 6.7rem 2rem;
   border: 0.2em dotted yellow;
 
 }
 
-.banner img {
-  width: 90%;
-  margin: 2rem 2.5rem 2rem 1.5rem;
+.image-section img {
+  width: 96%;
+  padding: 2rem 0 2rem 1.5rem;
+  /*margin: 2rem 2.5rem 2rem 1.5rem;*/
 }
 
 .button-section {
@@ -125,13 +126,13 @@ header a {
 .text-content h1 {
   color: #4a4a4a;
   font-family: Arial, sans-serif;
-  font-size: 2.8rem;
+  font-size: 2.2rem;
 }
 
 .text-content p {
   color: #4a4a4a;
   font-family: Arial, sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 .section-2 {
@@ -149,7 +150,7 @@ header a {
   width: 60%;
   margin: 2rem 1.5rem;
   /*border-right: 0.15rem solid #d8d8d8;*/
-/*  border: 0.2em solid yellow;*/
+  border: 0.2em solid yellow;
 }
 
 .section-2-right {
@@ -158,7 +159,7 @@ header a {
 }
 
 .section-2-left img {
-  width: 94%;
+  width: 100%;
 }
 
 /*.right-side-img {
@@ -212,17 +213,17 @@ header a {
 
 .section-4-left {
   width: 60%;
+  margin: 0 1.5rem 2rem 1.5rem;
 /*  margin: 2rem 1.5rem;*/
 /*  border: 0.2em solid yellow;*/
 }
 
 .section-4-right {
   width: 40%;
-  border-left: 0.15rem solid #d8d8d8;
 }
 
 .section-4-left video {
-  width: 94%;
+  width: 100%;
 }
 
 .secton-4-2-col {
@@ -234,5 +235,17 @@ header a {
   padding: 1rem;
   text-align: center;
 }
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 1.5rem 2rem 1.5rem;
+}
+
+footer a {
+  padding: 0.5rem;
+}
+
+
 
 
